# FleetWatch

./: .gitignore  COLAB_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  Dockerfile  FleetWatch_Colab_Train.py  FleetWatch_Training_Colab.ipynb  IMPROVEMENTS.md  README.md  REWARD_FIX_SUMMARY.md  TASK3_SUCCESS_SUMMARY.md  TRAINING_GUIDE.txt  blog.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  self_improvement_state.pkl  self_improvement_system.py  task3_specialist_results.json  task3_specialist_training.py  test_reward_fix.py  train_now.py  train_ppo.py  train_ppo_enhanced.py  training_results.json
app/: __init__.py  env.py  main.py  models.py
app/graders/: basic_grader.py  master_grader.py
app/tasks/: task1_basic.py  task1_obvious.py  task2_pattern.py  task3_adversarial.py  task4_cascade.py  task5_collusion.py
docs/: HACKATHON_SUBMISSION.md  QUICK_START_ENHANCED.md  TRAINING_COMPLETE_SUMMARY.md  blog.md
results/: enhanced_training_results.json  training_results.json
scripts/: FleetWatch_Enhanced_Training.ipynb  generate_plots.py  test_all_tasks.py  train_enhanced_now.py
server/: app.py
